[gd_scene load_steps=5 format=3 uid="uid://w7uslflb1vs5"]

[ext_resource type="Script" uid="uid://s64at01rj22r" path="res://Battle/battle.gd" id="1_5pv0p"]
[ext_resource type="PackedScene" uid="uid://been0jwwxflop" path="res://Battle/player_group.tscn" id="1_ksnli"]
[ext_resource type="PackedScene" uid="uid://5dhap06uc3wk" path="res://Battle/enemy_group.tscn" id="2_o5tja"]
[ext_resource type="Script" uid="uid://c3xxqlttsdeef" path="res://Battle/effect_machine.gd" id="3_o5tja"]

[node name="Battle" type="Node2D"]
script = ExtResource("1_5pv0p")

[node name="PlayerGroup" parent="." instance=ExtResource("1_ksnli")]
position = Vector2(853, 119)

[node name="EnemyGroup" parent="." instance=ExtResource("2_o5tja")]
position = Vector2(205, 124)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="choice" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -126.0
offset_top = -339.0
offset_right = -9.0
offset_bottom = -128.0
grow_horizontal = 0
grow_vertical = 0

[node name="attack" type="Button" parent="CanvasLayer/choice"]
layout_mode = 2
text = "attack"

[node name="item" type="Button" parent="CanvasLayer/choice"]
layout_mode = 2
text = "item
"

[node name="act" type="Button" parent="CanvasLayer/choice"]
layout_mode = 2
text = "act"

[node name="attackChoice" type="VBoxContainer" parent="CanvasLayer"]
visible = false
offset_left = 1008.0
offset_top = 345.0
offset_right = 1128.0
offset_bottom = 411.0

[node name="normalAttack" type="Button" parent="CanvasLayer/attackChoice"]
layout_mode = 2
text = "Normal Attack
"

[node name="criticalAttack" type="Button" parent="CanvasLayer/attackChoice"]
layout_mode = 2
text = "Critical attack"

[node name="back" type="Button" parent="CanvasLayer/attackChoice"]
layout_mode = 2
text = "Back"

[node name="actChoice" type="VBoxContainer" parent="CanvasLayer"]
visible = false
offset_left = 1036.0
offset_top = 499.0
offset_right = 1153.0
offset_bottom = 530.0

[node name="back" type="Button" parent="CanvasLayer/actChoice"]
layout_mode = 2
text = "Back"

[node name="brace" type="Button" parent="CanvasLayer/actChoice"]
layout_mode = 2
text = "brace (skip round)"

[node name="BulletHellTimer" type="Timer" parent="."]
one_shot = true

[node name="effectMachine" type="Node" parent="."]
script = ExtResource("3_o5tja")

[connection signal="bullet_hell" from="EnemyGroup" to="PlayerGroup" method="_on_enemy_group_bullet_hell"]
[connection signal="next_player" from="EnemyGroup" to="PlayerGroup" method="_on_enemy_group_next_player"]
[connection signal="start_turn" from="EnemyGroup" to="." method="_on_enemy_group_start_turn"]
[connection signal="start_turn" from="EnemyGroup" to="PlayerGroup" method="_on_enemy_group_start_turn"]
[connection signal="start_turn" from="EnemyGroup" to="effectMachine" method="_on_enemy_group_start_turn"]
[connection signal="pressed" from="CanvasLayer/choice/attack" to="EnemyGroup" method="_on_attack_pressed"]
[connection signal="pressed" from="CanvasLayer/choice/act" to="PlayerGroup" method="_on_act_pressed"]
[connection signal="pressed" from="CanvasLayer/attackChoice/normalAttack" to="EnemyGroup" method="_on_normal_attack_pressed"]
[connection signal="pressed" from="CanvasLayer/attackChoice/criticalAttack" to="EnemyGroup" method="_on_critical_attack_pressed"]
[connection signal="pressed" from="CanvasLayer/attackChoice/back" to="EnemyGroup" method="_on_back_pressed"]
[connection signal="pressed" from="CanvasLayer/actChoice/back" to="PlayerGroup" method="_on_back_pressed"]
[connection signal="pressed" from="CanvasLayer/actChoice/back" to="EnemyGroup" method="_on_back_pressed"]
[connection signal="pressed" from="CanvasLayer/actChoice/brace" to="PlayerGroup" method="_on_brace_pressed"]
[connection signal="timeout" from="BulletHellTimer" to="EnemyGroup" method="_on_bullet_hell_timer_timeout"]
